--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node server.js",
+    "flask": "python app.py",
+    "dev": "concurrently \"npm run start\" \"npm run flask\""
   },
   "keywords": [],
   "author": "",
@@ -16,5 +18,8 @@
     "express": "^4.21.2",
     "mysql2": "^3.14.0",
     "nodemailer": "^6.10.0"
+  },
+  "devDependencies": {
+    "concurrently": "^9.1.2"
   }
 }
