--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.3",
     "express": "^4.21.2",
+    "form-data": "^4.0.2",
     "mysql2": "^3.14.0",
+    "node-fetch": "^3.3.2",
     "nodemailer": "^6.10.0"
   },
   "devDependencies": {
